--- a/Moon_np_LRO_WAC_Mosaic_NPole60_100mp/index.html
+++ b/Moon_np_LRO_WAC_Mosaic_NPole60_100mp/index.html
@@ -40,7 +40,7 @@
         maxResolution: 180 / 256,
         wrapX: false, //  关闭水平重复
         projection: 'EPSG:4326',
-        url: 'http://139.224.107.180:9080/type=1000010000&x={x}&y={y}&z={z}'
+        url: 'http://139.224.107.180:9080/type=1000000047&x={x}&y={y}&z={z}'
       });
 
       //  用于调试的瓦片图层
@@ -55,7 +55,7 @@
           new ol.layer.Tile({
             source: src,
             //  设置BBOX边界，不用请求边界之外的数据
-            extent: [-5, -5, 5, 5]
+            extent: [-33,-33,33,33]
           }),
 
           new ol.layer.Tile({
@@ -65,9 +65,9 @@
 
         view: new ol.View({
           center: [0, 0], //  初始化时中心点
-          zoom: 6,
-          minZoom: 6,
-          maxZoom: 15, //  限制最大缩放级别(z=14)
+          zoom: 2,
+          minZoom: 2,
+          maxZoom: 7, //  限制最大缩放级别(z=6)
           projection: 'EPSG:4326'
         })
       });
