--- a/Moon_sp_LRO_LOLA_ClrShade_Spolar875_10m/index.html
+++ b/Moon_sp_LRO_LOLA_ClrShade_Spolar875_10m/index.html
@@ -40,7 +40,7 @@
         maxResolution: 180 / 256,
         wrapX: false, //  关闭水平重复
         projection: 'EPSG:4326',
-        url: 'http://139.224.107.180:9080/type=1000010000&x={x}&y={y}&z={z}'
+        url: 'http://139.224.107.180:9080/type=1000000042&x={x}&y={y}&z={z}'
       });
 
       //  用于调试的瓦片图层
@@ -55,7 +55,7 @@
           new ol.layer.Tile({
             source: src,
             //  设置BBOX边界，不用请求边界之外的数据
-            extent: [-5, -5, 5, 5]
+            extent: [-3,-3,3,3]
           }),
 
           new ol.layer.Tile({
@@ -67,7 +67,7 @@
           center: [0, 0], //  初始化时中心点
           zoom: 6,
           minZoom: 6,
-          maxZoom: 15, //  限制最大缩放级别(z=14)
+          maxZoom: 10, //  限制最大缩放级别(z=9)
           projection: 'EPSG:4326'
         })
       });
