--- a/Moon_sp_LRO_WAC_Mosaic_SPole60_100mp/index.html
+++ b/Moon_sp_LRO_WAC_Mosaic_SPole60_100mp/index.html
@@ -26,18 +26,13 @@
       /**
         此数据由Arcgis发布，经由zpc的下载工具下载的。
 
-        原点在中心0,0处
+        原点在中心经纬度0,0处
 
-        目前BBOX对应的经纬度太大！
+        原始投影系: 极点立体投影
+        下载后投影系: EPSG:4326
 
         20230612  liyunfei
       */
-      // BBOX等效的纬度范围(deg)
-      let deltaLat = (931100 / 1095930.0) * 45.0;
-      let wetLon = - deltaLat;
-      let eastLon = deltaLat;
-      let southLat = -deltaLat;
-      let northLat = deltaLat;
 
       //  瓦片图层
       let src = new ol.source.XYZ({
@@ -60,7 +55,7 @@
           new ol.layer.Tile({
             source: src,
             //  设置BBOX边界，不用请求边界之外的数据
-            extent: [wetLon, southLat, eastLon, northLat]
+            extent: [-33,-33,33,33]
           }),
 
           new ol.layer.Tile({
