--- a/Moon_eqc_Apollo15_PanCam_Slope_28N307E_3mp/index.html
+++ b/Moon_eqc_Apollo15_PanCam_Slope_28N307E_3mp/index.html
@@ -23,24 +23,14 @@
   <body>
     <div id="map" class="map"></div>
     <script>
-      /**
-        此数据由Arcgis发布，经由zpc的下载工具下载的。
-
-        原点在中心经纬度0,0处
-
-        原始投影系: 极点立体投影
-        下载后投影系: EPSG:4326
-
-        20230612  liyunfei
-      */
-
+     
       //  瓦片图层
       let src = new ol.source.XYZ({
         //tileSize: 512,
         maxResolution: 180 / 256,
         wrapX: false, //  关闭水平重复
         projection: 'EPSG:4326',
-        url: 'http://139.224.107.180:9080/type=1000010003&x={x}&y={y}&z={z}'
+        url: 'http://139.224.107.180:9080/type=1000000064&x={x}&y={y}&z={z}'
       });
 
       //  用于调试的瓦片图层
@@ -55,7 +45,7 @@
           new ol.layer.Tile({
             source: src,
             //  设置BBOX边界，不用请求边界之外的数据
-            extent: [-6,-6,6,6]
+            extent: [-53.1015073,26.7635801,-51.5924499,29.0334672]
           }),
 
           new ol.layer.Tile({
@@ -64,10 +54,10 @@
         ],
 
         view: new ol.View({
-          center: [0, 0], //  初始化时中心点
-          zoom: 4,
-          minZoom: 4,
-          maxZoom: 9, //  限制最大缩放级别(z=6)
+          center: [-52, 27], //  初始化时中心点
+          zoom: 8,
+          minZoom: 8,
+          maxZoom: 13, //  限制最大缩放级别(z=12)
           projection: 'EPSG:4326'
         })
       });
