新增Moon_sp_SchrodingerCraterMareUnit_50cmV1.0.sp，未完

--- a/Moon_sp_SchrodingerCraterMareUnit_50cmV1.0.sp/index.html
+++ b/Moon_sp_SchrodingerCraterMareUnit_50cmV1.0.sp/index.html
@@ -58,9 +58,9 @@
             extent: [-2.5, -2, -0.8, -0.3]
           }),
 
-         // new ol.layer.Tile({
-         //   source: debugSource
-         // })
+          new ol.layer.Tile({
+            source: debugSource
+          })
         ],
 
         view: new ol.View({
