完善Moon_eqc_A12...A17,暂时为本地bgc

--- a/Moon_eqc_A14_60x60km.0_3.eq/index.html
+++ b/Moon_eqc_A14_60x60km.0_3.eq/index.html
@@ -29,7 +29,7 @@
         maxResolution: 180 / 256,
         wrapX: false, //  关闭水平重复
         projection: 'EPSG:4326',
-        url: 'http://139.224.107.180:9080/type=1000000107&x={x}&y={y}&z={z}'
+        url: 'http://localhost:9080/type=1000000111&x={x}&y={y}&z={z}'
       });
 
       //  用于调试的瓦片图层
@@ -44,17 +44,17 @@
           new ol.layer.Tile({
             source: src,
             //  设置BBOX边界，不用请求边界之外的数据
-            extent: [24.5768438, 43.4411588, 26.0529992, 45.9874958]
+            extent: [-18.4593366, -4.6393366, -16.4806634, -2.6606634]
           }),
 
           new ol.layer.Tile({ source: debugSource })
         ],
 
         view: new ol.View({
-          center: [25, 44], //  初始化时中心点
-          zoom: 8,
-          minZoom: 8,
-          maxZoom: 15, //  限制最大缩放级别(z=14)
+          center: [-17, -3], //  初始化时中心点
+          zoom: 7,
+          minZoom: 6,
+          maxZoom: 16, //  限制最大缩放级别(z=15)
           projection: 'EPSG:4326'
         })
       });
