--- a/Moon_eqc_A16_60x60km.eq/index.html
+++ b/Moon_eqc_A16_60x60km.eq/index.html
@@ -29,7 +29,7 @@
         maxResolution: 180 / 256,
         wrapX: false, //  关闭水平重复
         projection: 'EPSG:4326',
-        url: 'http://139.224.107.180:9080/type=1000000107&x={x}&y={y}&z={z}'
+        url: 'http://localhost:9080/type=1000000113&x={x}&y={y}&z={z}'
       });
 
       //  用于调试的瓦片图层
@@ -44,17 +44,17 @@
           new ol.layer.Tile({
             source: src,
             //  设置BBOX边界，不用请求边界之外的数据
-            extent: [24.5768438, 43.4411588, 26.0529992, 45.9874958]
+            extent: [14.5106517, -9.9593381, 16.4893414, -7.9806485]
           }),
 
           new ol.layer.Tile({ source: debugSource })
         ],
 
         view: new ol.View({
-          center: [25, 44], //  初始化时中心点
-          zoom: 8,
-          minZoom: 8,
-          maxZoom: 15, //  限制最大缩放级别(z=14)
+          center: [15, -8], //  初始化时中心点
+          zoom: 7,
+          minZoom: 6,
+          maxZoom: 16, //  限制最大缩放级别(z=15)
           projection: 'EPSG:4326'
         })
       });
